# QtUnits

./: .gitignore  CMakeLists.txt  LICENSE  README.md  common.pri  qtunits.pro  qunits.pro
QUnits/: QUnits.pro  qunits.cpp  qunits.h  qunits_global.h
src/: CMakeLists.txt  angle.cpp  area.cpp  area.h  length.cpp  length.h  qtunits_global.hpp  quantitybase.hpp  src.pro  systems.hpp  unitconvertor.hpp
src/QUnits/: QUnits.pro  angle.cpp  angle.h  area.cpp  area.h  iquantity.hpp  length.cpp  length.h  quantitybase.hpp  systems.hpp  unitconvertor.hpp
src/QUnits/widgets/: unitdoublespinbox.hpp  unitlineedit.hpp  unitwidget.hpp
src/QtUnits/: QtUnits  QtUnits.pro  angle.cpp  angle.h  area.h  iquantity.hpp  length.h  qtunits.cpp  qtunits.h  qtunits_global.hpp  quantitybase.hpp  unitconvertor.hpp
src/QtUnits/widgets/: unitdoublespinbox.hpp  unitlineedit.hpp  unitwidget.hpp
src/tests/: main.cpp  quantitytests.cpp  quantitytests.h  tests.pro  unitconvertortest.cpp  unitconvertortest.h  unitconvertortests.h
src/widgets/: unitdoublespinbox.hpp  unitlineedit.hpp  unitwidget.hpp
tests/: CMakeLists.txt  tests.pro  unitconvertortests.cpp
